--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,8 +6,10 @@
 	</head>
 	<body>
 		<ul>
+                    
 			<li>Exemples MVC
 				<ul>
+                                        <li><a href="identification.jsp"> S'identifier pour le projet (MVC)</a></li>
 					<li><a href="mvc/categories">Toutes les catégories (MVC)</a></li>
 					<li><a href="mvc/categorieProduits">Produits par catégories (MVC)</a></li>
 					<li><a href="mvc/produits">Liste des produits (MVC)</a></li>					
