--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -9,7 +9,7 @@
                     
 			<li>Exemples MVC
 				<ul>
-                                        <li><a href="identification.jsp"> S'identifier pour le projet (MVC)</a></li>
+
 					<li><a href="mvc/categories">Toutes les catégories (MVC)</a></li>
 					<li><a href="mvc/categorieProduits">Produits par catégories (MVC)</a></li>
 					<li><a href="mvc/produits">Liste des produits (MVC)</a></li>					
@@ -41,6 +41,11 @@
 					</li>
 				</ul>
 			</li>
+                        <li> Projet e-commerce
+                            <ul>
+                                <li><a href="mvc/identification"> S'identifier pour le projet (MVC)</a></li>
+                            </ul>
+                        </li>
 		</ul>
 	</body>
 </html>
