Classe partie Admin

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -9,7 +9,7 @@
                     
 			<li>Exemples MVC
 				<ul>
-
+                                        <li><a href="mvc/identification">s'identifier (MVC)</a></li>
 					<li><a href="mvc/categories">Toutes les catégories (MVC)</a></li>
 					<li><a href="mvc/categorieProduits">Produits par catégories (MVC)</a></li>
 					<li><a href="mvc/produits">Liste des produits (MVC)</a></li>					
