--- a/src/main/webapp/statsCategories.html
+++ b/src/main/webapp/statsCategories.html
@@ -26,7 +26,7 @@ and open the template in the editor.
 			result.forEach(ligne => data.push([ligne.libelle, ligne.prix]));
 			var dataTable = google.visualization.arrayToDataTable(data);
 
-			var options = {title: 'Voici un beau camembert'};
+			var options = {title: 'Représentation du chiffre d affaires par catégorie'};
 			var chart = new google.visualization.PieChart(document.getElementById('piechart'));
 			chart.draw(dataTable, options);
 		}
@@ -49,7 +49,7 @@ and open the template in the editor.
 	</script>
 </head>
 <body>
-	<h1>Chiffre d'affaire par catégorie</h1>
+	<h1>Chiffre d'affaires par catégorie</h1>
 	<!-- Le graphique apparaît ici -->
 	<div id="piechart" style="width: 900px; height: 500px;"></div>
 	<hr>
