--- a/src/main/webapp/statsClients.html
+++ b/src/main/webapp/statsClients.html
@@ -1,3 +1,5 @@
+<!--Author     : marie-->
+
 <!DOCTYPE html>
 <!--
 To change this license header, choose License Headers in Project Properties.
@@ -5,6 +7,9 @@ To change this template file, choose Tools | Templates
 and open the template in the editor.
 -->
 <!DOCTYPE html>
+
+
+
 <head>
 	<title>Visualisation Google</title>
 	<meta charset="UTF-8">
@@ -31,7 +36,7 @@ and open the template in the editor.
 			chart.draw(dataTable, options);
 		}
 
-		// Afficher les ventes par catégorie
+		// Afficher les ventes par client
 		function doAjax() {
 			$.ajax({
 				url: "mvc/service/unitesVendues/clients",
