--- a/src/main/webapp/statsPays.html
+++ b/src/main/webapp/statsPays.html
@@ -1,3 +1,5 @@
+<!--Author     : marie-->
+
 <!DOCTYPE html>
 <!--
 To change this license header, choose License Headers in Project Properties.
@@ -37,7 +39,7 @@ and open the template in the editor.
 			chart.draw(dataTable, options);
 		}
 
-		// Afficher les ventes par catégorie
+		// Afficher les ventes par pays
 		function doAjax() {
 			$.ajax({
 				url: "mvc/service/unitesVendues/pays",
